Ensure photos are not too big

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,8 +118,17 @@ footer p {
 }
 
 .image {
+    img {
+        object-fit: contain;
+        width:100%;
+        height:100%;
+    }
+
     video {
         vertical-align: middle;
+        object-fit: contain;
+        width:100%;
+        height:100%;
     }
 
     @include fullscreen() {
@@ -151,9 +160,6 @@ footer p {
             margin-right: -50%;
             transform: translate(-50%, -50%);
             z-index: 0;
-            object-fit: contain;
-            width:100%;
-            height:100%;
         }
 
         video {
@@ -163,9 +169,6 @@ footer p {
             margin-right: -50%;
             transform: translate(-50%, -50%);
             z-index: 0;
-            object-fit: contain;
-            width:100%;
-            height:100%;
         }
     }
 }
